# uv-pex-monorepo

./: .gitignore  BUILD.pkl  PklProject  PklProject.deps.json  README.md  benchmark.py  benchmark.sh  blog_demo.tape  blog_demo.webm  build_pex.sh  pylock.toml  pyproject.toml
cli/: BUILD.pkl  Dockerfile  build.sh  pyproject.toml
cli/cli/: app.py
lib/format/: BUILD.pkl  pyproject.toml
lib/format/format/: make_sarcastic.py
lib/grog/: pex.pkl  python.pkl
lib/proto/: BUILD.pkl  build_proto.sh  pyproject.toml
lib/proto/pb/: __init__.py  sarcasm_pb2.py  sarcasm_pb2_grpc.py
pants/: README.md  pants.toml
pants/cli/: BUILD  Dockerfile  README.md
pants/cli/cli/: app.py
pants/lib/format/: BUILD
pants/lib/format/tests/: test_make_sarcastic.py
pants/lib/proto/: BUILD
pants/lib/proto/pb/: __init__.py
pants/lib/proto/schema/: sarcasm.proto
pants/server/: BUILD  Dockerfile
pants/server/server/: app.py
scripts/: build_pex.sh  run_tests.sh
server/: BUILD.pkl  Dockerfile  pyproject.toml
server/server/: app.py  pylock.toml
server/tests/: test_server.py
