[project]
name = "uv-earthly-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = []

[tool.uv.workspace]
members = ["server", "lib/format", "cli", "lib/proto"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "tomli>=2.2.1",
    "grpcio-tools>=1.67.1",
]
