[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "format",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
format = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
