[project]
name = "demo-proto"
version = "0.1.0"
description = "Minimal protobuf/grpc stubs for demo"
requires-python = ">=3.10"
dependencies = [
  "protobuf>=5.28.3",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pb"
module-root = ""

[dependency-groups]
dev = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
]
